# dami

./: .linter-clang-flags  CMakeLists.txt
include/: ast.h  hashtable.h  interpreter.h  node.h  parser.h  stack.h  tokenizer.h  value.h
src/: ast.c  ast.cpp  hashtable.c  interpreter.c  interpreter.cpp  main.c  main.cpp  parser.c  parser.cpp  stack.c  tokenizer.c  tokenizer.cpp  value.c  value.cpp
test/: test1.dami
